--- a/style.css
+++ b/style.css
@@ -1,14 +1,19 @@
 h1 {
   font-size: 40px;
 }
+h2 {
+  font-size: 28px;
+}
 body {
+  margin: 0;
   font-family: "Poppins", sans-serif;
 }
-.name-highlight {
+.orangred-highlight {
   color: orangered;
 }
 p {
-  text-align: justify;
+  /* text-align: justify; */
+  color: dimgray;
 }
 .half-width {
   width: 40%;
@@ -16,7 +21,51 @@ p {
   margin-left: 2%;
   padding-left: 1%;
 }
+.shadow-work {
+  box-shadow: 10px 10px 40px gray;
+  border-radius: 5px;
+  height: 60%;
+  background-color: white;
+}
 .half-width img {
-  width: 600px;
-  padding: 90px;
+  width: 100%;
+}
+section {
+  height: 500px;
+  padding-bottom: 100px;
+}
+.top-banner {
+  background-image: url(img/top-banner.png);
+  background-repeat: no-repeat;
+}
+.middle-banner {
+  background-image: url(img/dream-bg.png);
+  background-repeat: no-repeat;
+  background-position: right;
+}
+.exprience-area {
+  background-image: url(img/exp-bg.png);
+  background-repeat: no-repeat;
+  background-position: left;
+}
+.link-button {
+  text-decoration: none;
+  background-image: linear-gradient(lightsalmon, tomato);
+  padding: 10px 20px;
+  border-radius: 5px;
+  color: white;
+  font-weight: 700;
+}
+#full-stack {
+  border-left: 8px solid;
+  border-image: linear-gradient(rgb(231, 62, 20), rgb(139, 26, 6));
+  border-image-slice: 1;
+}
+#baby-dev {
+  border-left: 8px solid;
+  border-image: linear-gradient(rgb(12, 226, 23), rgb(148, 212, 10));
+  border-image-slice: 1;
+}
+footer p {
+  text-align: center;
 }
